udpated main page and changed nav style

--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,12 @@ body {
 }
 
 nav {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  border: 1px dotted;
 }
+
+
+
